// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackEntitiesList /> should render with empty entities 1`] = `
<div>
  <h2>
    Entity list
  </h2>
  <br />
  <div
    className="search"
    style={
      Object {
        "marginTop": 15,
      }
    }
  >
    <form
      className="form-inline"
      onSubmit={[Function]}
    >
      <div
        className="form-group has-feedback"
      >
        <input
          autoComplete="off"
          className="query form-control"
          id="common-search-form-query-input"
          onChange={[Function]}
          placeholder="Enter search query..."
          spellCheck="false"
          style={
            Object {
              "width": "auto",
            }
          }
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
        style={
          Object {
            "marginLeft": 5,
          }
        }
      >
        <button
          className="submit-button btn btn-default"
          disabled={false}
          type="submit"
        >
          Filter
        </button>
      </div>
      <div
        className="form-group"
        style={
          Object {
            "marginLeft": 5,
          }
        }
      >
        <button
          className="reset-button btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="reset"
        >
          Reset
        </button>
      </div>
    </form>
  </div>
  <div>
    <div
      className="row "
    >
      <div
        className="col-md-12"
      >
        <div
          className="data-table table-responsive"
          id="entity-list"
        >
          <p>
            No data available.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContentPackEntitiesList /> should render with entities and parameters without readOnly 1`] = `
<div>
  <h2>
    Entity list
  </h2>
  <br />
  <div
    className="search"
    style={
      Object {
        "marginTop": 15,
      }
    }
  >
    <form
      className="form-inline"
      onSubmit={[Function]}
    >
      <div
        className="form-group has-feedback"
      >
        <input
          autoComplete="off"
          className="query form-control"
          id="common-search-form-query-input"
          onChange={[Function]}
          placeholder="Enter search query..."
          spellCheck="false"
          style={
            Object {
              "width": "auto",
            }
          }
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
        style={
          Object {
            "marginLeft": 5,
          }
        }
      >
        <button
          className="submit-button btn btn-default"
          disabled={false}
          type="submit"
        >
          Filter
        </button>
      </div>
      <div
        className="form-group"
        style={
          Object {
            "marginLeft": 5,
          }
        }
      >
        <button
          className="reset-button btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="reset"
        >
          Reset
        </button>
      </div>
    </form>
  </div>
  <div>
    <div
      className="row "
    >
      <div
        className="col-md-12"
      >
        <div
          className="data-table table-responsive"
          id="entity-list"
        >
          <table
            className="table scrollable"
          >
            <thead>
              <tr>
                <th>
                  Title
                </th>
                <th>
                  Type
                </th>
                <th>
                  Description
                </th>
                <th>
                  Applied Parameter
                </th>
                <th>
                  Action
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  A good input
                </td>
                <td>
                  Input
                </td>
                <td>
                  Input
                </td>
                <td>
                  1
                </td>
                <td>
                  <div
                    className="btn-toolbar"
                    role="toolbar"
                  >
                    <button
                      className="btn btn-xs btn-primary"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Apply Parameter
                    </button>
                    <button
                      className="btn btn-xs btn-info"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Show
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  A bad input
                </td>
                <td>
                  Input
                </td>
                <td>
                  BadInput
                </td>
                <td>
                  0
                </td>
                <td>
                  <div
                    className="btn-toolbar"
                    role="toolbar"
                  >
                    <button
                      className="btn btn-xs btn-primary"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Apply Parameter
                    </button>
                    <button
                      className="btn btn-xs btn-info"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Show
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
